--- a/public/login_fe/assets/styles.css
+++ b/public/login_fe/assets/styles.css
@@ -13,11 +13,11 @@ body {
     height: 100%;
     width: 100%;
     place-items: center;
-    background: -webkit-linear-gradient(left, #a445b2, #fa4299);
+    background: -webkit-linear-gradient(left, #a445b2, #cf42fa);
 }
 
 ::selection {
-    background: #fa4299;
+    background: #cf42fa;
     color: #fff;
 }
 
@@ -79,7 +79,7 @@ body {
     left: 0;
     z-index: 0;
     border-radius: 5px;
-    background: -webkit-linear-gradient(left, #a445b2, #fa4299);
+    background: -webkit-linear-gradient(left, #a445b2, #cf42fa);
     transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
@@ -144,7 +144,7 @@ input[type="radio"] {
 }
 
 .form-inner form .field input:focus {
-    border-color: #fc83bb;
+    border-color: #e483f;
     /* box-shadow: inset 0 0 3px #fb6aae; */
 }
 
@@ -168,7 +168,7 @@ form .field input:focus::placeholder {
 
 .form-inner form .pass-link a,
 .form-inner form .perusahaan-link a {
-    color: #fa4299;
+    color: #cf42fa;
     text-decoration: none;
 }
 
@@ -190,7 +190,7 @@ form .btn .btn-layer {
     width: 300%;
     position: absolute;
     left: -100%;
-    background: -webkit-linear-gradient(right, #a445b2, #fa4299, #a445b2, #fa4299);
+    background: -webkit-linear-gradient(right, #a445b2, #cf42fa, #a445b2, #cf42fa);
     border-radius: 5px;
     transition: all 0.4s ease;
     ;
@@ -234,7 +234,7 @@ form .btn input[type="submit"] {
 }
 
 .form-inner form .form-control select:focus {
-    border-color: #fc83bb;
+    border-color: #e483fc;
     /* box-shadow: inset 0 0 3px #fb6aae; */
 }
 
@@ -258,7 +258,7 @@ form .form-control select:focus::placeholder {
 
 .form-inner form .pass-link a,
 .form-inner form .perusahaan-link a {
-    color: #fa4299;
+    color: #cf42fa;
     text-decoration: none;
 }
 
