--- a/public/admin/assets/core/scss/bootstrap.css
+++ b/public/admin/assets/core/scss/bootstrap.css
@@ -8,7 +8,7 @@
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
-  --pink: #e83e8c;
+  --pink: #cf3ee8;
   --red: #dc3545;
   --orange: #fd7e14;
   --yellow: #ffc107;
@@ -420,7 +420,7 @@ samp {
 
 code {
   font-size: 87.5%;
-  color: #e83e8c;
+  color: #cf3ee8;
   word-break: break-word; }
   a > code {
     color: inherit; }
