--- a/public/login_fe/assets/styles.css
+++ b/public/login_fe/assets/styles.css
@@ -144,7 +144,7 @@ input[type="radio"] {
 }
 
 .form-inner form .field input:focus {
-    border-color: #e483f;
+    border-color: #e483fc;
     /* box-shadow: inset 0 0 3px #fb6aae; */
 }
 
