--- a/public/assets/css/styless.css
+++ b/public/assets/css/styless.css
@@ -1,15 +1,19 @@
-.image{
-    margin-left: 70px;
-}
-
-.getstarted {
-}
 
 .tombol .btn-primary {
-    margin-left : 25%;
-    width : 50%;
+    width : 100%;
     height : 40px;
     background-color : #8E44AD !important;
     border-color: #8E44AD !important;
     outline-color : #8E44AD !important;
+}
+
+.logout{
+    color: #8E44AD ;
+}
+
+.fa-user-circle{
+    width: 30px !important;
+    height: 30px !important;
+    background-image: #8E44AD;
+    margin-left: 30px;
 }
